styles/style.css
body {
	padding: 0;
	margin-block-end: 4em;
}

textarea { 
	resize: block;
	height: 10em;
}

input {
    width: 100%;
}

[v-cloak] {
	display: none !important;
}

/* edit chota-grid variables */
:root {
	--grid-maxWidth: 75rem;
	--grid-gutter: 1.25rem;
}

.section-event-display {
	width: auto;
	max-width: calc(min(100svh, 38em));
	container-type: inline-size;
	margin-inline: auto;
}
.event-display {
	container-type: size;
	width: calc(min(100cqw, 100svh, 38em));
	height: calc(min(100cqw, 100svh, 38em) * 0.9);
	margin-inline: auto;
	display: grid;
	justify-items: center;
	align-items: end;
}
.event-square {
	container-type: size;
	grid-row: 1 / 2;
	grid-column: 1 / 2;
	width: 80%;
	aspect-ratio: 1;
	border: 0.4cqw solid #777777;
	display: flex;
	flex-direction: column;
	flex-wrap: nowrap;
	justify-content: center;
	align-items: center;
	padding: 3%;
}
.event-square > * {
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 1cqw;
	flex-wrap: nowrap;
	font-size: 3.7cqw;
}
.event-square .title h1 {
	margin: 2cqh 0 3cqh 0;
}
.event-square .date-and-time {
	
}
.event-square .timezone {
	font-size: 0.8em;
}
.event-square .rsvp {
	
}
.event-square .description {
	flex-grow: 1;
}
.event-square .description div {
	white-space: pre-wrap;
	text-align: center;
}

.calendar-buttons-display {
	container-type: size;
	display: grid;
	justify-items: center;
	align-items: center;
	justify-content: center;
	height: calc(min(100cqw, 100svh, 38em) * 0.2);
	margin-block-end: 3.75rem;
}
@property --cal-scale-numerator { syntax: "<length>"; initial-value: 0px; inherits: false; }
@property --cal-scale-denominator { syntax: "<length>"; initial-value: 0px; inherits: false; }
.calendar-buttons {
	/*
	We want to set transform: scale(calc(100cqw / 33.777rem * 1.1)), however dividing one length
	by another isn't supported well by all browsers (e.g. Firefox mobile), so instead we use some
	complicated length variables as a workaround (see: https://stackoverflow.com/a/79734800)
	*/
	--cal-scale-numerator: 100cqw;
	--cal-scale-denominator: 33.777rem;
	--cal-scale: calc(tan(atan2(var(--cal-scale-numerator), var(--cal-scale-denominator))));
	transform: scale(calc(var(--cal-scale) * 1.1));
	min-width: max-content;
	height: 0; /* if the height was not zero, then the extra size would mess up the scale transformation on some screen sizes*/
}

@media screen and (max-width: 35rem) {
	.event-display {
		width: calc(min(100cqw, 100svh, 38em));
		height: calc(min(100cqw, 100svh, 38em));
	}
	.event-square {
		width: 100%;
	}
	.calendar-buttons {
		transform: scale(calc(var(--cal-scale) * 1.1 * (1 / 0.8)));
	}
}

.section-edit {
	padding-inline: 13px;
}

.timezone-row .col {
	margin-bottom: 0;
}

/* copy the form input styling from sakura.css and apply this to search-and-select boxes too */
.search-and-select-box .vs__dropdown-toggle {
	color: #4a4a4a;
    padding: 4px 1px 6px 1px;
    background-color: #f1f1f1;
    border: 1px solid #f1f1f1;
    border-radius: 4px;
    box-shadow: none;
    box-sizing: border-box;
}
.search-and-select-box .vs__dropdown-toggle:focus-within {
	border: 1px solid #1d7484;
	outline: 0;
}
/* fix clipped x and v buttons */
.search-and-select-box svg {
	max-width: revert;
}
/* fix subtly different font size inside search and select box between 'typing' and 'option selected' modes */
.search-and-select-box .vs__selected, .search-and-select-box .vs__selected:focus {
    line-height: var(--vs-line-height);
    font-size: var(--vs-font-size);
}
/* don't try to wrap overflow for long timezone names, just clip instead */
.search-and-select-box .vs__selected-options {
	overflow: auto;
}
.search-and-select-box .vs__selected {
	max-width: 0;
	white-space: nowrap;
}

.links-list {
	display: flex;
	flex-direction: column;
	gap: 1.25rem;
}

.url-preview-row, .url-preview {
    display: flex;
	flex-direction: row;
	justify-content: flex-start;
	align-items: center;
	gap: 0.625rem;
}
.url-preview-row {
    flex-wrap: nowrap;
}
.url-preview {
	flex-grow: 1;
	padding: 0.625rem;
	background-color: #f1f1f1;
	overflow-x: scroll;
	-webkit-overflow-scrolling: touch;
	flex-wrap: nowrap;
}
.url-preview .url-base {
	text-transform: uppercase;
	font-size: 0.7em;
	font-weight: bold;
	color: #A57BB0;
}
.url-preview .hash-icon-container {
	display: inline-grid;
	place-items: center;
}
.url-preview svg.hash-icon {
    grid-area: 1 / 2 / 1 / 2;
	min-width: 1.25rem;
	height: 1.25rem;
	width: 1.25rem;
	color: #A57BB0;
}
.url-preview .hash-text {
	grid-area: 1 / 2 / 1 / 2;
	font-size: 0.75rem;
	color: transparent;
}
.url-preview code {
	/*word-break: break-all;*/
	white-space: nowrap;
	flex-grow: 1;
	padding: 0;
}
.url-preview-row .copy-button {
	background-color: transparent;
	border: none;
	color: #4a4a4a;
	padding: 0;
	min-width: 1.5625rem;
	width: 1.5625rem;
	height: 1.5625rem;
}
.url-preview-row .copy-button svg {
	height: 1.5625rem;
	width: 1.5625rem;
}
.url-preview-row .copy-button svg.copied {
	color: #982c61;
}

.url-stats, .timezone-details {
    display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
	gap: 0.3125rem;
	font-size: 0.8em;
	margin-block-end: 0.5em;
}
.url-stats {
	flex-direction: row;
}
.timezone-details {
	flex-direction: column;
}
.url-stats .compatibility-heading, .timezone-details .timezone-details-heading {
	text-transform: uppercase;
	font-size: 0.8em;
	font-weight: bold;
}
.timezone-details .timezone-details-heading {
	padding-bottom: 1em;
	width: 100%;
    text-align: center;
}
.timezone-details .timezone-details-body {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.section-faq {
	margin-block-start: 6.25rem;
	padding-inline: 13px;
}
.section-faq p {
	font-size: 0.8em;
}

